# comfyui_facetools_without_mediapipe

./: AILab_SAM3Segment.py  InstantID.py  MANIFEST.in  README.md  __init__.py  nodes.py  pyproject.toml  utils.py
js/: facetools_human_segmentation.css  facetools_human_segmentation.js  sam3_color_widget.js
md/: SAM3_EXPLANATION_SO_FAR_EN.md
nodes/: image_resize.py  nodes.py
sam3/: AILab_SAM3Segment.py
src/comfyui_facetools_disabled_mediapipe/: face_mesh.py  face_mesh_common.py  insightface_segmentation.py
src/comfyui_facetools_disabled_mediapipe/human_parsing/: parsing_api.py  run_parsing.py  simple_extractor_dataset.py  transforms.py
tests/: __init__.py  test_comfyui_facetools_disabled_mediapipe.py
