[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "comfyui_sunxAI_facetools"
version = "0.2.7"  # Must increment on each release
description = "Face detection & restoration tools for ComfyUI by Sunx.ai"
authors = [
  { name = "Sunx.ai", email = "sunx.ai@hotmail.com" }
]
readme = "README.md"
# Use SPDX standard format, avoid JSON string
license = { text = "GPL-3.0-only" }
requires-python = ">=3.10"
dependencies = [
  "Pillow>=10.0.0",
  "insightface>=0.7.3"
]
classifiers = []

[project.optional-dependencies]
dev = [
  "bump-my-version",
  "coverage",
  "mypy",
  "pre-commit",
  "pytest",
  "ruff",
]

[project.urls]
Repository = "https://github.com/upseem/comfyui_sunxAI_facetools"  # ← Key field: resolves repository is required
Homepage = "https://github.com/upseem/comfyui_sunxAI_facetools"
Bugs = "https://github.com/upseem/comfyui_sunxAI_facetools/issues"

[tool.comfy]
# Must match the Publisher created on Registry (the part after @)
PublisherId = "sunxai"
DisplayName = "comfyui_sunxAI_facetools"
Icon = "https://avatars.githubusercontent.com/u/124853686"

[tool.setuptools.package-data]
"*" = ["*.*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]

[tool.mypy]
files = "."
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

[tool.ruff]
line-length = 140
src = ["src", "tests"]
target-version = "py39"

[tool.ruff.lint]
select = [
  "S102",  # exec-builtin
  "S307",  # eval-used
  "W293",
  "F",
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
